chore: Amazon Bedrock subproject refactoring (#293)
* Initial migration

* Update README.md

* Update test instructions

* Update integrations/amazon_bedrock/pyproject.toml

Co-authored-by: Silvano Cerza <3314350+silvanocerza@users.noreply.github.com>

* Update integrations/amazon_bedrock/pyproject.toml

Co-authored-by: Silvano Cerza <3314350+silvanocerza@users.noreply.github.com>

* Linting

---------

Co-authored-by: Silvano Cerza <3314350+silvanocerza@users.noreply.github.com>

--- a/integrations/amazon_bedrock/pyproject.toml
+++ b/integrations/amazon_bedrock/pyproject.toml
@@ -35,6 +35,9 @@ Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/m
 Issues = "https://github.com/deepset-ai/haystack-core-integrations/issues"
 Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/amazon_bedrock"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/haystack_integrations"]
+
 [tool.hatch.version]
 source = "vcs"
 tag-pattern = 'integrations\/amazon_bedrock-v(?P<version>.*)'
@@ -71,7 +74,8 @@ dependencies = [
   "ruff>=0.0.243",
 ]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/amazon_bedrock_haystack tests}"
+typing = "mypy --install-types --non-interactive --explicit-package-bases {args:src/ tests}"
+
 style = [
   "ruff {args:.}",
   "black --check --diff {args:.}",
@@ -136,26 +140,24 @@ unfixable = [
 ]
 
 [tool.ruff.isort]
-known-first-party = ["amazon_bedrock_haystack"]
+known-first-party = ["haystack_integrations"]
 
 [tool.ruff.flake8-tidy-imports]
-ban-relative-imports = "all"
+ban-relative-imports = "parents"
 
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["amazon_bedrock_haystack", "tests"]
+source_pkgs = ["src", "tests"]
 branch = true
 parallel = true
-omit = [
-  "src/amazon_bedrock_haystack/__about__.py",
-]
+
 
 [tool.coverage.paths]
-amazon_bedrock_haystack = ["src/amazon_bedrock_haystack", "*/amazon_bedrock/src/amazon_bedrock_haystack"]
-tests = ["tests", "*/amazon_bedrock_haystack/tests"]
+amazon_bedrock_haystack = ["src/*"]
+tests = ["tests"]
 
 [tool.coverage.report]
 exclude_lines = [
@@ -170,6 +172,7 @@ module = [
   "transformers.*",
   "boto3.*",
   "haystack.*",
+  "haystack_integrations.*",
   "pytest.*",
   "numpy.*",
 ]
