--- a/.github/workflows/elasticsearch.yml
+++ b/.github/workflows/elasticsearch.yml
@@ -47,6 +47,10 @@ jobs:
       - name: Run ElasticSearch container
         working-directory: integrations/elasticsearch
         run: docker-compose up -d
+        
+      - name: Generate docs
+        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+        run: hatch run docs
 
       - name: Run tests
         working-directory: integrations/elasticsearch
