--- a/integrations/supabase/pyproject.toml
+++ b/integrations/supabase/pyproject.toml
@@ -147,7 +147,7 @@ unfixable = [
 known-first-party = ["supabase_haystack"]
 
 [tool.ruff.flake8-tidy-imports]
-ban-relative-imports = "all"
+ban-relative-imports = "parents"
 
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
