--- a/.github/workflows/pgvector.yml
+++ b/.github/workflows/pgvector.yml
@@ -18,6 +18,10 @@ env:
   PYTHONUNBUFFERED: "1"
   FORCE_COLOR: "1"
 
+defaults:
+  run:
+    working-directory: integrations/pgvector  
+
 jobs:
   run:
     name: Python ${{ matrix.python-version }} on ${{ startsWith(matrix.os, 'macos-') && 'macOS' || startsWith(matrix.os, 'windows-') && 'Windows' || 'Linux' }}
@@ -49,10 +53,12 @@ jobs:
         run: pip install --upgrade hatch
 
       - name: Lint
-        working-directory: integrations/pgvector
         if: matrix.python-version == '3.9'
-        run: hatch run lint:all  
+        run: hatch run lint:all
+
+      - name: Generate docs
+        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+        run: hatch run docs          
 
       - name: Run tests
-        working-directory: integrations/pgvector
         run: hatch run cov
