--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -55,6 +55,7 @@ jobs:
         run: docker exec ollama ollama pull ${{ env.LLM_FOR_TESTS }}        
 
       - name: Generate docs
+        working-directory: integrations/ollama
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
 
