ollama: generate api docs (#332)
* ollama: generate api docs

* Update .github/workflows/ollama.yml

Co-authored-by: Silvano Cerza <3314350+silvanocerza@users.noreply.github.com>

---------

Co-authored-by: Silvano Cerza <3314350+silvanocerza@users.noreply.github.com>

--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -54,6 +54,11 @@ jobs:
       - name: Pull the LLM in the Ollama service
         run: docker exec ollama ollama pull ${{ env.LLM_FOR_TESTS }}        
 
+      - name: Generate docs
+        working-directory: integrations/ollama
+        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+        run: hatch run docs
+
       - name: Run tests
         working-directory: integrations/ollama
         run: hatch run cov
