--- a/.github/workflows/unstructured.yml
+++ b/.github/workflows/unstructured.yml
@@ -54,6 +54,10 @@ jobs:
         if: matrix.python-version == '3.9'
         run: hatch run lint:all
 
+      - name: Generate docs
+        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+        run: hatch run docs
+
       - name: Run tests
         working-directory: integrations/unstructured      
         run: hatch run cov
