--- a/.github/workflows/gradient.yml
+++ b/.github/workflows/gradient.yml
@@ -52,5 +52,9 @@ jobs:
       if: matrix.python-version == '3.9' && runner.os == 'Linux'
       run: hatch run lint:all
 
+    - name: Generate docs
+      if: matrix.python-version == '3.9' && runner.os == 'Linux'
+      run: hatch run docs
+
     - name: Run tests
       run: hatch run cov
