--- a/.github/workflows/pinecone.yml
+++ b/.github/workflows/pinecone.yml
@@ -46,6 +46,10 @@ jobs:
         if: matrix.python-version == '3.9'
         run: hatch run lint:all
 
+      - name: Generate docs
+        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+        run: hatch run docs
+
       - name: Run tests
         working-directory: integrations/pinecone
         run: hatch run cov
