Add missing dependency

--- a/integrations/jina/pyproject.toml
+++ b/integrations/jina/pyproject.toml
@@ -43,7 +43,7 @@ root = "../.."
 git_describe_command = 'git describe --tags --match="integrations/jina-v[0-9]*"'
 
 [tool.hatch.envs.default]
-dependencies = ["coverage[toml]>=6.5", "pytest"]
+dependencies = ["coverage[toml]>=6.5", "pytest", "haystack-pydoc-tools"]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
