--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: '3.9'
 
       - name: Install Hatch
         run: pip install --upgrade hatch
