--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -22,13 +22,15 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.10'
 
       - name: Install Hatch
         run: pip install --upgrade hatch
 
       - name: Lint
         run: hatch run lint:all
+        env:
+          NODE_ENV: lint
 
       - name: Generate docs
         if: runner.os == 'Linux'
