--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -27,10 +27,11 @@ jobs:
       - name: Install Hatch
         run: pip install --upgrade hatch
 
+      - name: Install Black
+        run: pip install --upgrade black
+
       - name: Lint
         run: hatch run lint:all
-        env:
-          NODE_ENV: lint
 
       - name: Generate docs
         if: runner.os == 'Linux'
