--- a/integrations/jina/pyproject.toml
+++ b/integrations/jina/pyproject.toml
@@ -15,7 +15,7 @@ authors = [
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
-  "Programming Language :: Python",
+  "Programming Language :: Python ::",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
