--- a/integrations/fastembed/pyproject.toml
+++ b/integrations/fastembed/pyproject.toml
@@ -133,7 +133,7 @@ ignore = [
   "B027",
   # Allow boolean positional values in function calls, like `dict.get(... True)`
   "FBT003",
-  "FBT001", "FBT002"
+  "FBT001", "FBT002",
   # Ignore checks for possible passwords
   "S105", "S106", "S107",
   # Ignore complexity
