--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -99,6 +99,11 @@ integration:weaviate:
       - any-glob-to-any-file: "integrations/weaviate/**/*"
       - any-glob-to-any-file: ".github/workflows/weaviate.yml"
 
+integration:deepeval:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/deepeval/**/*"
+      - any-glob-to-any-file: ".github/workflows/deepeval.yml"
+
 # Topics
 topic:CI:
   - changed-files:
