--- a/integrations/fastembed/pyproject.toml
+++ b/integrations/fastembed/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "fastembed-haystack"
 dynamic = ["version"]
-description = "An integration of fastembed with Haystack"
+description = "Haystack 2.x component to embed strings and Documents using fastembed embedding model"
 readme = "README.md"
 requires-python = ">=3.8"
 license = "Apache-2.0"
@@ -50,7 +50,7 @@ dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
   "ipython",
-  "haystack-pydoc-tools",  
+  "haystack-pydoc-tools",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
