--- a/integrations/fastembed/pyproject.toml
+++ b/integrations/fastembed/pyproject.toml
@@ -178,6 +178,7 @@ module = [
   "haystack.*",
   "haystack_integrations.*",
   "fastembed.*",
-  "pytest.*"
+  "pytest.*",
+  "numpy.*"
 ]
 ignore_missing_imports = true
