skip docs generation for the time being

--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -37,9 +37,10 @@ jobs:
         if: matrix.python-version == '3.9'
         run: hatch run lint:all
 
-      - name: Generate docs
-        if: matrix.python-version == '3.9' && runner.os == 'Linux'
-        run: hatch run docs          
+# TODO: Add docs config and uncomment the following section
+#      - name: Generate docs
+#        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+#        run: hatch run docs          
 
       - name: Run tests
         run: hatch run cov
