--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -38,9 +38,9 @@ jobs:
         run: hatch run lint:all
 
 # TODO: Add docs config and uncomment the following section
-#      - name: Generate docs
-#        if: matrix.python-version == '3.9' && runner.os == 'Linux'
-#        run: hatch run docs          
+     - name: Generate docs
+       if: matrix.python-version == '3.9' && runner.os == 'Linux'
+       run: hatch run docs          
 
       - name: Run tests
         run: hatch run cov
