--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -29,6 +29,11 @@ integration:elasticsearch:
       - any-glob-to-any-file: "integrations/elasticsearch/**/*"
       - any-glob-to-any-file: ".github/workflows/elasticsearch.yml"
 
+integration:gastembed:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/fastembed/**/*"
+      - any-glob-to-any-file: ".github/workflows/fastembed.yml"
+
 integration:google-ai:
   - changed-files:
       - any-glob-to-any-file: "integrations/google_ai/**/*"
