--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -29,7 +29,7 @@ integration:elasticsearch:
       - any-glob-to-any-file: "integrations/elasticsearch/**/*"
       - any-glob-to-any-file: ".github/workflows/elasticsearch.yml"
 
-integration:gastembed:
+integration:fastembed:
   - changed-files:
       - any-glob-to-any-file: "integrations/fastembed/**/*"
       - any-glob-to-any-file: ".github/workflows/fastembed.yml"
