docs: update paths and titles

--- a/integrations/deepeval/pydoc/config.yml
+++ b/integrations/deepeval/pydoc/config.yml
@@ -19,9 +19,9 @@ renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
   excerpt: DeepEval integration for Haystack
   category_slug: haystack-integrations
-  title: Chroma
+  title: DeepEval
   slug: integrations-deepeval
-  order: 1
+  order: 45
   markdown:
     descriptive_class_title: false
     descriptive_module_title: true
