--- a/integrations/instructor_embedders/pydoc/config.yml
+++ b/integrations/instructor_embedders/pydoc/config.yml
@@ -3,8 +3,9 @@ loaders:
     search_path: [../src]
     modules:
       [
-        "haystack_integrations.components.embedders.instructor_embedders",
-        "haystack_integrations.components.embedders.instructor_embedders.embedding_backend",
+        "haystack_integrations.components.embedders.instructor_embedders.instructor_document_embedder",
+        "haystack_integrations.components.embedders.instructor_embedders.instructor_text_embedder",
+        "haystack_integrations.components.embedders.instructor_embedders.embedding_backend.instructor_backend",
       ]
     ignore_when_discovered: ["__init__"]
 processors:
@@ -17,9 +18,9 @@ processors:
   - type: crossref
 renderer:
   type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
-  excerpt: Embedders integration for Haystack
+  excerpt: Instructor integration for Haystack
   category_slug: haystack-integrations
-  title: Embedders
+  title: Instructor
   slug: integrations-instructor-embedders
   order: 90
   markdown:
