wip: adding test coverage

--- a/integrations/amazon_bedrock/pyproject.toml
+++ b/integrations/amazon_bedrock/pyproject.toml
@@ -157,24 +157,18 @@ ban-relative-imports = "parents"
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["src", "tests"]
+source = ["haystack_integrations"]
 branch = true
 parallel = true
 
-[tool.coverage.paths]
-amazon_bedrock_haystack = ["src/*"]
-tests = ["tests"]
-
 [tool.coverage.report]
-omit = ["*__init__*"]
+omit = ["*/tests/*", "*/__init__.py"]
+show_missing=true
 exclude_lines = [
   "no cov",
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
-show_missing = true
-precision = 2
-
 
 [[tool.mypy.overrides]]
 module = [
