--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -64,6 +64,11 @@ integration:llama_cpp:
       - any-glob-to-any-file: "integrations/llama_cpp/**/*"
       - any-glob-to-any-file: ".github/workflows/llama_cpp.yml"
 
+integration:mongodb-atlas:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/mongodb_atlas/**/*"
+      - any-glob-to-any-file: ".github/workflows/mongodb_atlas.yml"
+
 integration:ollama:
   - changed-files:
       - any-glob-to-any-file: "integrations/ollama/**/*"
