--- a/.github/workflows/mongodb_atlas.yml
+++ b/.github/workflows/mongodb_atlas.yml
@@ -30,8 +30,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3.10', '3.11']
+        # MongoDB Atlas run against a live instance so we should avoid overwhelming it
+        os: [ubuntu-latest]
+        python-version: ['3.9', '3.10']
 
     steps:
       - uses: actions/checkout@v4
