--- a/.github/workflows/mongodb_atlas.yml
+++ b/.github/workflows/mongodb_atlas.yml
@@ -32,7 +32,7 @@ jobs:
       matrix:
         # MongoDB Atlas run against a live instance so we should avoid overwhelming it
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.10']
+        python-version: ['3.10']
 
     steps:
       - uses: actions/checkout@v4
